# lilypad

./: .gitignore  CMakeLists.txt  DUAL_WINDOW_FIX.md  bang.ts  resources.qrc  test_database.cpp
.kiro/specs/browser-performance/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/cef-network-crash-fix/: bugfix.md  design.md  tasks.md
.kiro/specs/cef-qt-window-embedding/: design.md  requirements.md  tasks.md
.kiro/specs/input-passthrough-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/ui-polish/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/url-bar-expand-animation/: design.md  requirements.md  tasks.md
.kiro/specs/vertical-tab-panel/: .config.kiro  design.md  requirements.md  tasks.md
qml/: HamburgerMenu.qml  Main.qml  SearchButton.qml  TabEntry.qml  TabPanel.qml  UrlBar.qml  UrlBarContainer.qml  qmldir  test.qml
qml/LilypadTheme/: Theme.qml  qmldir
scripts/: bangs.db  convert_bangs.py
src/: cef_handler.cpp  cef_handler.h  cef_osr_widget.cpp  cef_osr_widget.h  main.cpp  mainwindow.cpp  mainwindow.h  tab_entry.cpp  tab_entry.h  tab_entry_widget.cpp  tab_entry_widget.h  tab_manager.cpp  tab_manager.h  tab_panel.cpp  tab_panel.h  urlprocessor.cpp  urlprocessor.h
tests/: test_browser_performance.cpp  test_cef_osr_widget.cpp  test_input_passthrough_exploratory.cpp  test_input_passthrough_fix_checking.cpp  test_input_passthrough_preservation.cpp  test_mainwindow_props.cpp  test_tab_entry_widget.cpp  test_tab_manager_props.cpp  test_tab_panel_props.cpp  test_ui_polish_props.cpp
tests/exploratory/: README.md  test_bug1_extra_window.py  test_bug2_network_crash.py  test_bug3_geometry.py  test_bug4_cache_warning.py
tests/fix_checking/: README.md  test_integration_geometry.py  test_integration_launch.py  test_integration_no_cache_warning.py  test_unit_browser_lifecycle.py  test_unit_cef_message_loop.py  test_unit_cef_shutdown.py  test_unit_no_inprocess_gpu.py  test_unit_null_guard.py  test_unit_root_cache_path.py  test_unit_set_as_child.py  test_unit_single_shot_defer.py  test_unit_single_window.py  test_unit_wa_native_window.py
tests/preservation/: README.md  test_pbt_browser_lifecycle.py  test_pbt_geometry_rect.py  test_pbt_url_navigation.py  test_pbt_url_passthrough.py  test_unit_browser_embedding.py  test_unit_cef_shutdown.py  test_unit_message_loop.py
tests/qml/: tst_hamburger_menu.qml  tst_loading_indicator.qml  tst_newtab_button.qml  tst_tabentry_colors.qml  tst_tabpanel_divider.qml  tst_theme_props.qml  tst_topbar_props.qml  tst_urlbar_expand_animation.qml  tst_urlbar_props.qml
